--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 10:31]
+#+CAPTION: Clock summary at [2018-10-16 Tue 11:01]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:28* |       |      |   0.0 |
+| *Total time*                                                                | *12:52* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:28   |       |      |   0.0 |
-| Active                                                                      |         | 12:28 |      |   0.0 |
+| Stories                                                                     | 12:52   |       |      |   0.0 |
+| Active                                                                      |         | 12:52 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
 | Add support for kcov                                                        |         |       | 3:09 |   0.0 |
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
-| Add vcpkg support to osx builds                                             |         |       | 5:02 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       | 5:07 |   0.0 |
+| Ignore all failing tests                                                    |         |       | 0:19 |   0.0 |
 | High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -186,8 +187,10 @@ Links:
 - [[http://help.appveyor.com/discussions/problems/6209-build-is-not-triggered-for-tag][Build is not triggered for tag]]
 - [[https://help.appveyor.com/discussions/questions/2626-pushing-tag-does-not-trigger-build][Pushing tag does not trigger build]]
 
-*** STARTED Add vcpkg support to osx builds                           :story:
+*** COMPLETED Add vcpkg support to osx builds                         :story:
+    CLOSED: [2018-10-16 Tue 11:00]
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 10:55]--[2018-10-16 Tue 11:00] =>  0:05
     CLOCK: [2018-10-16 Tue 09:42]--[2018-10-16 Tue 09:58] =>  0:16
     CLOCK: [2018-10-16 Tue 09:28]--[2018-10-16 Tue 09:38] =>  0:10
     CLOCK: [2018-10-15 Mon 22:50]--[2018-10-15 Mon 23:20] =>  0:30
@@ -214,6 +217,21 @@ Notes:
 - vcpkg misbehaves a bit when used from clang7. [[https://github.com/Microsoft/vcpkg/issues/4476][Reported]] to
   mothership.
 
+Links:
+
+- [[https://github.com/Microsoft/vcpkg/issues/4437][Error linking Boost on x86-osx]]
+- [[https://github.com/Microsoft/vcpkg/issues/4476][Building vcpkg on OSX using LLVM's clang]]
+
+*** STARTED Ignore all failing tests                                  :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 10:36]--[2018-10-16 Tue 10:55] =>  0:19
+    :END:
+
+At present we have a number of tests that are commented out but appear
+as failing under cdash. This is very confusing. We need to mark them
+with the ignore macro. We should not waste time fixing the tests as
+they need to be re-written using the diff framework.
+
 *** High-level model thoughts                                         :story:
     :LOGBOOK:
     CLOCK: [2018-10-11 Thu 16:06]--[2018-10-11 Thu 18:26] =>  2:20
@@ -237,13 +255,6 @@ Notes:
   another endpoint, and users probably don't really need something
   that just reads a model and returns the injector version.
 - the distribution channels are a function of the product API.
-
-*** Ignore all failing tests                                          :story:
-
-At present we have a number of tests that are commented out but appear
-as failing under cdash. This is very confusing. We need to mark them
-with the ignore macro. We should not waste time fixing the tests as
-they need to be re-written using the diff framework.
 
 *** Rename debian package                                             :story:
 
