--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,19 +13,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 11:01]
+#+CAPTION: Clock summary at [2018-10-16 Tue 11:10]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:52* |       |      |   0.0 |
+| *Total time*                                                                | *13:01* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:52   |       |      |   0.0 |
-| Active                                                                      |         | 12:52 |      |   0.0 |
+| Stories                                                                     | 13:01   |       |      |   0.0 |
+| Active                                                                      |         | 13:01 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
 | Add support for kcov                                                        |         |       | 3:09 |   0.0 |
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
+| Build on tags for Windows                                                   |         |       | 0:09 |   0.0 |
 | Add vcpkg support to osx builds                                             |         |       | 5:07 |   0.0 |
 | Ignore all failing tests                                                    |         |       | 0:19 |   0.0 |
 | High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
@@ -174,6 +175,9 @@ use CTest. We need to add it to the CTest script.
 
 *** COMPLETED Build on tags for Windows                               :story:
     CLOSED: [2018-10-16 Tue 10:30]
+    :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 11:01]--[2018-10-16 Tue 11:10] =>  0:09
+    :END:
 
 At present we are not building and deploying for tags on Windows. This
 is a major pain because it means we must remember to always push the
