--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,22 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 11:10]
+#+CAPTION: Clock summary at [2018-10-16 Tue 11:41]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:01* |       |      |   0.0 |
+| *Total time*                                                                | *13:29* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:01   |       |      |   0.0 |
-| Active                                                                      |         | 13:01 |      |   0.0 |
+| Stories                                                                     | 13:29   |       |      |   0.0 |
+| Active                                                                      |         | 13:29 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
 | Add support for kcov                                                        |         |       | 3:09 |   0.0 |
 | Windows MSI is very large                                                   |         |       | 0:26 |   0.0 |
 | Build on tags for Windows                                                   |         |       | 0:09 |   0.0 |
-| Add vcpkg support to osx builds                                             |         |       | 5:07 |   0.0 |
-| Ignore all failing tests                                                    |         |       | 0:19 |   0.0 |
+| Add vcpkg support to osx builds                                             |         |       | 5:17 |   0.0 |
+| Ignore all failing tests                                                    |         |       | 0:33 |   0.0 |
+| AppVeyor is not building on GitHub commits                                  |         |       | 0:04 |   0.0 |
 | High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -194,6 +195,7 @@ Links:
 *** COMPLETED Add vcpkg support to osx builds                         :story:
     CLOSED: [2018-10-16 Tue 11:00]
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 11:31]--[2018-10-16 Tue 11:41] =>  0:10
     CLOCK: [2018-10-16 Tue 10:55]--[2018-10-16 Tue 11:00] =>  0:05
     CLOCK: [2018-10-16 Tue 09:42]--[2018-10-16 Tue 09:58] =>  0:16
     CLOCK: [2018-10-16 Tue 09:28]--[2018-10-16 Tue 09:38] =>  0:10
@@ -228,6 +230,7 @@ Links:
 
 *** STARTED Ignore all failing tests                                  :story:
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 11:16]--[2018-10-16 Tue 11:30] =>  0:24
     CLOCK: [2018-10-16 Tue 10:36]--[2018-10-16 Tue 10:55] =>  0:19
     :END:
 
@@ -235,6 +238,18 @@ At present we have a number of tests that are commented out but appear
 as failing under cdash. This is very confusing. We need to mark them
 with the ignore macro. We should not waste time fixing the tests as
 they need to be re-written using the diff framework.
+
+*** STARTED AppVeyor is not building on GitHub commits                :story:
+    :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 11:11]--[2018-10-16 Tue 11:15] =>  0:04
+    :END:
+
+It seems we've lost windows builds some how. GitHub is sending the
+notification but AppVeyor is refusing to build.
+
+Links:
+
+- [[https://help.appveyor.com/discussions/problems/17480-builds-not-triggering-from-github-commit][Builds not triggering from GitHub commit]]
 
 *** High-level model thoughts                                         :story:
     :LOGBOOK:
