--- a/doc/agile/v1/sprint_backlog_10.org
+++ b/doc/agile/v1/sprint_backlog_10.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2018-10-16 Tue 11:55]
+#+CAPTION: Clock summary at [2018-10-16 Tue 12:30]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *13:42* |       |      |   0.0 |
+| *Total time*                                                                | *14:13* |       |      |   0.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 13:42   |       |      |   0.0 |
-| Active                                                                      |         | 13:42 |      |   0.0 |
+| Stories                                                                     | 14:13   |       |      |   0.0 |
+| Active                                                                      |         | 14:13 |      |   0.0 |
 | Edit release notes for previous sprint                                      |         |       | 1:10 |   0.0 |
 | Sprint and product backlog grooming                                         |         |       | 0:10 |   0.0 |
 | Create a document with release steps                                        |         |       | 0:11 |   0.0 |
@@ -29,7 +29,8 @@
 | Build on tags for Windows                                                   |         |       | 0:09 |   0.0 |
 | Add vcpkg support to osx builds                                             |         |       | 5:17 |   0.0 |
 | Remove all references to conan                                              |         |       | 0:13 |   0.0 |
-| Ignore all failing tests                                                    |         |       | 0:33 |   0.0 |
+| Travis badge is not red when build is failing                               |         |       | 0:14 |   0.0 |
+| Ignore all failing tests                                                    |         |       | 0:50 |   0.0 |
 | AppVeyor is not building on GitHub commits                                  |         |       | 0:04 |   0.0 |
 | High-level model thoughts                                                   |         |       | 2:20 |   0.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
@@ -239,8 +240,25 @@ We still have a number of places where we are doing things for conan
 (checking for its presence in CMake, stories etc). Delete all of
 those.
 
-*** STARTED Ignore all failing tests                                  :story:
+*** COMPLETED Travis badge is not red when build is failing           :story:
+    CLOSED: [2018-10-16 Tue 12:08]
     :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 11:56]--[2018-10-16 Tue 12:10] =>  0:14
+    :END:
+
+For some reason the badge is gray with the words error. This makes it
+less obvious that the build is borked. Fix it so its red.
+
+Seems this is because we are using shields.io rather than the travis
+badge.
+
+Actually maybe this is due to the fact that there is currently an
+ongoing build. Lets ignore it for now.
+
+*** COMPLETED Ignore all failing tests                                :story:
+    CLOSED: [2018-10-16 Tue 12:29]
+    :LOGBOOK:
+    CLOCK: [2018-10-16 Tue 12:11]--[2018-10-16 Tue 12:28] =>  0:17
     CLOCK: [2018-10-16 Tue 11:16]--[2018-10-16 Tue 11:30] =>  0:24
     CLOCK: [2018-10-16 Tue 10:36]--[2018-10-16 Tue 10:55] =>  0:19
     :END:
